--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -19,12 +19,47 @@
     @media (max-width: 600px) {
         margin-top: 0;
     }
+
+    &.animated{
+        .advantage{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .details{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .priceTag{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .properties{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .features{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .buttons{
+            opacity: 1;
+            transform: translateY(0);
+        }
+     }
 }
 
 .advantage {
     margin-top: 16px;
     font: 14px/21px GilroyRegular;
     color: blackLighter;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease .5s;
 }
 
 .details {
@@ -34,12 +69,18 @@
     color: blackLighter;
     text-decoration: underline;
     cursor: pointer;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease .75s;
 }
 
 .priceTag {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease 1s;
 }
 
 .priceTagPriceWrapper {
@@ -84,6 +125,9 @@
 .properties {
     display: flex;
     justify-content: space-between;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease 1.25s;
 
     @media (max-width: 1190px) and (min-width: 1001px) {
         flex-direction: column;
@@ -362,6 +406,9 @@
 
 .features {
     margin-top: 22px;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease 1.5s;
 }
 
 .feature {
@@ -418,6 +465,9 @@
 }
 
 .buttons {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease 1.75s;
     margin-top: 22px;
     display: flex;
     
