--- a/src/apps/client/ui/components/Gallery/Gallery.css
+++ b/src/apps/client/ui/components/Gallery/Gallery.css
@@ -12,6 +12,18 @@
     z-index: 3;
     user-select: none;
 
+    &.animated{
+        .additionalImgs{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .slider{
+            opacity: 1;
+            transform: translateY(0);
+        }
+     }
+
     @media (max-width: 1060px) {
         margin-right: 30px;
     }
@@ -78,9 +90,11 @@
 }
 
 .slider{
+    opacity: 0;
+    transform: translateY(20px);
     position: relative;
     left: 0;
-    transition: left .5s ease-in-out, height .5s ease-in-out;
+    transition: left .5s ease-in-out, height .5s ease-in-out, .5s ease .5s;
     display: flex;
     align-items: flex-start;
     width: 100%;
@@ -161,6 +175,9 @@
 }
 
 .additionalImgs {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease .75s;
     display: flex;
     flex-wrap: wrap;
 
