--- a/src/apps/client/ui/pages/ProductPage/ProductPage.css
+++ b/src/apps/client/ui/pages/ProductPage/ProductPage.css
@@ -2,4 +2,27 @@
     text-align: center;
     font: 36px/54px GilroyRegular;
     color: #232323;
+    transition: .5s ease;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.sliderWrapper{
+    transition: .5s ease .5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.slider{
+    &.animated{
+        .sliderTitle{
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .sliderWrapper{
+            opacity: 1;
+            transform: translateY(0);
+        }
+     }
 }
