--- a/src/apps/client/ui/components/Gallery/Gallery.css
+++ b/src/apps/client/ui/components/Gallery/Gallery.css
@@ -18,9 +18,13 @@
             transform: translateY(0);
         }
 
-        .slider{
+        .sliderWrap{
             opacity: 1;
             transform: translateY(0);
+        }
+
+        .discount{
+            opacity: 1;
         }
      }
 
@@ -49,6 +53,8 @@
     color: whiteBasic;
     background: redBasic;
     z-index: 1;
+    opacity: 0;
+    transition: .5s ease .75s;
 }
 
 .percentage{
@@ -56,6 +62,9 @@
 }
 
 .sliderWrap {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: .5s ease .25s;
     position: relative;
 
     &:hover {
@@ -90,11 +99,9 @@
 }
 
 .slider{
-    opacity: 0;
-    transform: translateY(20px);
     position: relative;
     left: 0;
-    transition: left .5s ease-in-out, height .5s ease-in-out, .5s ease .5s;
+    transition: left .5s ease-in-out, height .5s ease-in-out;
     display: flex;
     align-items: flex-start;
     width: 100%;
@@ -177,7 +184,7 @@
 .additionalImgs {
     opacity: 0;
     transform: translateY(20px);
-    transition: .5s ease .75s;
+    transition: .5s ease .5s;
     display: flex;
     flex-wrap: wrap;
 
