--- a/src/apps/client/ui/components/ProductsSlider/ProductsSlider.css
+++ b/src/apps/client/ui/components/ProductsSlider/ProductsSlider.css
@@ -187,7 +187,7 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        background: whiteBasic;
+        background: gray3;
         transition: background 0.25s ease-out;
         width: 40px;
         height: 6px;
