--- a/src/apps/client/ui/components/Tab/Tab.css
+++ b/src/apps/client/ui/components/Tab/Tab.css
@@ -206,3 +206,37 @@
         font-size: 10px;
     }
 }
+
+.featuresContainer{
+    max-width: 630px;
+
+    img{
+        height: fit-content;
+        margin-right: 23px;
+    }
+}
+
+
+.featureBlock{
+    display: flex;
+    align-items: center;
+
+    &:not(:last-child){
+        margin-bottom: 20px;
+    }
+}
+
+.featureTitle{
+    font-family: GilroyRegular;
+    font-size: 18px;
+    line-height: 21px;
+    color: #232323;
+    margin-bottom: 10px;
+}
+
+.featureDescription{
+    font-family: GilroyRegular;
+    font-size: 16px;
+    line-height: 18px;
+    color: rgba(35, 35, 35, 0.7);
+}
