--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -147,6 +147,10 @@
     padding-bottom: 100%;
     min-height: 134px;
     overflow: hidden;
+
+    @media(max-width: 640px) {
+        display: none;
+    }
 }
 
 .img {
@@ -173,10 +177,14 @@
     text-align: center;
 
     @media (max-width: 640px) {
-        font-size: 14px;
+        font-size: 21px;
         line-height: 16px;
-        padding: 3px 10px;
+        padding: 5px 10px;
     }
+}
+
+.delivery {
+    background: rgb(68, 68, 201);
 }
 
 .percentage{
@@ -209,6 +217,12 @@
     text-align: center;
     color: #25716C;
     padding: 10px 0;
+
+    @media (max-width: 640px) {
+        font-size: 24px;
+        line-height: 18px;
+        margin-bottom: 12px;
+    }
 }
 
 .notExist {
@@ -250,9 +264,9 @@
     }
 
     @media (max-width: 640px) {
-        font-size: 13px;
-        line-height: 15px;
-        padding: 7px 0 5px 0;
+        font-size: 18px;
+        line-height: 20px;
+        padding: 7px 0 12px 0;
     }
 }
 
@@ -263,9 +277,9 @@
     text-align: center;
 
     @media (max-width: 640px) {
-        font-size: 13px;
-        line-height: 15px;
-        margin-bottom: 7px;
+        font-size: 21px;
+        line-height: 18px;
+        margin-bottom: 12px;
     }
 }
 
@@ -282,7 +296,7 @@
     left: 50px;
 
     @media (max-width: 640px) {
-        font-size: 10px;
+        font-size: 16px;
         line-height: 11px;
         bottom: 9px;
         left: 9px;
@@ -347,4 +361,56 @@
 
 .sizesWrap{
     margin: 10px auto 15px auto;
+}
+
+.cardSliderContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: none;
+
+    @media(max-width: 640px) {
+        display: block;
+    }
+}
+
+.nextArrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    z-index: 1;
+    padding: 20px 20px 20px 50px;
+    cursor: pointer;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+
+    &:before {
+        position: relative;
+        content: url("./img/arrow.svg");
+    }
+}
+
+.prevArrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%) rotate(180deg);
+    left: 0;
+    z-index: 1;
+    padding: 20px 20px 20px 50px;
+    cursor: pointer;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+
+    &:before {
+        position: relative;
+        content: url("./img/arrow.svg");
+    }
 }
