--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -471,6 +471,10 @@
     &:first-child {
         border-top: 1px solid rgba(216, 216, 216, 0.5);
     }
+}
+
+.mainCategory {
+    position: relative;
 
     &:after {
         position: absolute;
@@ -478,9 +482,52 @@
         background: url('./img/menuItemArrow.svg') center no-repeat;
         width: 14px;
         height: 100%;
-        right: 15px;
+        right: 0;
         top: 0;
+        transition: all 0.5s ease;
     }
+}
+
+.mainCategory.open:after {
+    transform: rotate(90deg);
+}
+
+.subCategoryWrap {
+    height: 100%;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.5s ease-out;
+}
+
+.subCategoryWrap.open {
+    max-height: 500px;
+    transition: all 1s ease-in;
+}
+
+.subCategoryItem {
+    display: block;
+    padding-left: 15px;
+    font-size: 15px;
+    line-height: 21px;
+    text-decoration: none;
+    color: #232323;
+}
+
+.all {
+    margin-right: 5px;
+    font-size: 15px;
+    line-height: 21px;
+}
+
+.allCategory {
+    text-transform: lowercase;
+    font-size: 15px;
+    line-height: 21px; 
+}
+
+.subCategoryItem:first-child{
+    display: block;
+    margin-top: 10px;
 }
 
 .menuItemTopPromotions {
